# static-site-generator

./: .gitignore  pyproject.toml
src/: blocktype.py  extract_markdown.py  extract_title.py  generate_page.py  htmlnode.py  leafnode.py  main.py  markdown_to_blocks.py  markdown_to_html_node.py  parentnode.py  split_nodes.py  splitnodes.py  test_blocktype.py  test_extract_markdown.py  test_extract_title.py  test_htmlnode.py  test_leafnodes.py  test_markdown_to_blocks.py  test_markdown_to_html_node.py  test_parentnode.py  test_split_nodes.py  test_splitnodes.py  test_text_to_textnodes.py  test_textnode.py  text_to_textnodes.py  textnode.py
